# OPRP

./: .gitignore  README.md
ERAD_A/: Makefile  nbody  nbody.c
ERAD_B/: Makefile  mandelbrot  mandelbrot.cpp  mandelbrot.in
OpenMP/: CMakeLists.txt  graphics.py  main  mainClang  meusResultsCLang.txt  meusResultsGcc.txt
OpenMP/Results/Diel/: graphics.py
OpenMP/Results/UDESC/: graphics.py
OpenMP/include/: benchmarks.h  matrix.h
OpenMP/src/: benchmarks.c  main.c  matrix.c
matrix/: .gitignore  CMakeLists.txt  Makefile  README.md  main  main.c  matrix.c
matrix/include/: benchmarks.h  matrix.h
matrix/src/: benchmarks.c  main.c  matrix.c
matrix_thread/: Makefile  main.c  matrix.c  matrix.h  matrix_thread.c  matrix_thread.h
matrix_thread/.scripts/: title
matrix_threaded/: .gitignore  CMakeLists.txt  Makefile  README.md  Resultados Benchmark.txt
matrix_threaded/.scripts/: generate_title.sh
matrix_threaded/include/: benchmarks.h  colors.h  matrix.h  threaded_matrix.h
matrix_threaded/src/: benchmarks.c  main.c  matrix.c  threaded_matrix.c
threaded/: CMakeLists.txt  README.md  graphics.py
threaded/Results/Diel/: graphics.py
threaded/include/: threaded_matrix.h
threaded/src/: benchmarks.c  main.c  matrix.c
trabalhoFinal/: .gitignore  CMakeLists.txt  Master.cpp  Master.hpp  README.md  Worker.cpp  Worker.hpp  inputTrabalho  ips.txt  machines.txt  main.cpp
